# stochastic_model

./: .gitignore  Cargo.toml  README.md  coisas a fazer.txt  plot_config.toml
src/: lib.rs  main.rs  node.rs  settings.rs
src/grammar/: model.pest
src/model/: csvdata.rs  mod.rs  ode_solver.rs  utils.rs
src/stochastic_model/: csvdata.rs  mod.rs  plot.rs  sto_parser.rs
src/tests/: hiv_model.txt  hiv_model_v2.txt  model.json  model_pp.txt  pp_input1.txt  pp_input1_result.csv  pp_input2.txt  pp_input2_result.csv  pp_input3.txt  pp_input3_result.csv  pp_input4.txt  pp_input4_result.csv  predator_prey.txt  simulation_result.csv  tokens.json
src/tests/imgs/: plot_Ap_1.py  plot_Apm_1.py  plot_B_1.py  plot_Bm_1.py  plot_IgG_1.py  plot_IgM_1.py  plot_Pl_1.py  plot_Ps_1.py  plot_The_1.py  plot_Thi_1.py  plot_Thm_1.py  plot_Thmi_1.py  plot_Thn_1.py  plot_Tke_1.py  plot_Tkn_1.py  plot_V_1.py
tests/logs/: 0_log.txt  1_log.txt  2_log.txt  3_log.txt  4_log.txt
tests/models/: bn_model.txt  hiv_model.txt  hiv_model.txt.json  model.json  predatorprey_model.txt  predatorprey_model.txt.json  sir_model.txt  sir_model.txt.json  sirs_with_deaths.txt  viral_infection.txt  viral_infection.txt.json
tests/results/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
