[package]
name = "stochastic_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
pest = "2.7.7"
pest_derive = "2.7.7"
anyhow = "1.0.79"
mexprp = "0.3.1"
random_choice = "0.3.2"
csv = "1.3.0"
