[package]
name = "stochastic_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]v
rand = "0.8.5"
rand_distr = "0.4.3"
anyhow = "1.0.79"
random_choice = "0.3.2"
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
plotpy = "1.6.1"
expr_evaluator = { path = "./crates/expr_evaluator" }
colorgrad = "0.7.0"
serde_json = "1.0.128"
config = "0.14.0"
rayon = "1.10.0"
plotlars = "0.8.1"
